[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Grid.gd" type="Script" id=1]
[ext_resource path="res://Assets/woods.png" type="Texture" id=2]
[ext_resource path="res://Assets/plains.png" type="Texture" id=3]
[ext_resource path="res://Assets/water.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MainCam.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=6]
[ext_resource path="res://Scenes/CanvasLayer.gd" type="Script" id=7]
[ext_resource path="res://Assets/Highlight.png" type="Texture" id=8]

[sub_resource type="TileSet" id=1]
0/name = "plains.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 608, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "water.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 640, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "woods.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 160, 640, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="Grid" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
script = ExtResource( 1 )

[node name="MainCam" type="Camera2D" parent="."]
current = true
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="DetailPanel" type="Panel" parent="CanvasLayer"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -150.035
margin_right = -50.0354
margin_bottom = 80.0
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileName" type="Label" parent="CanvasLayer/DetailPanel"]
margin_right = 100.0
margin_bottom = 14.0
text = "TILE NAME"
align = 1
autowrap = true

[node name="TileDetails" type="Label" parent="CanvasLayer/DetailPanel"]
margin_top = 14.0
margin_right = 159.0
margin_bottom = 119.0
rect_scale = Vector2( 0.625695, 0.625695 )
text = "TILE DESC"
align = 1
autowrap = true

[node name="Highlight" type="Sprite" parent="."]
visible = false
position = Vector2( 336.103, 107.685 )
texture = ExtResource( 8 )
centered = false
